Bug #48604 DBTUX crash in 2-node online ordered index build
Submitted: 6 Nov 2009 18:06 Modified: 15 Nov 2009 20:30
Reporter: Pekka Nousiainen Email Updates:
Status: Closed
Category:Server: Cluster Severity:S2 (Serious)
Version:mysql-5.1-telco-6.2 OS:Any
Assigned to: Pekka Nousiainen Target Version:

[6 Nov 2009 18:06] Pekka Nousiainen
Description:
testOIBasic -case f crash in Dbtup::removeTuxEntries
i.e. index entry to remove not found.

Requires 2 data nodes (replicas).  Single node with
2 fragments will not do.

How to repeat:
above
[11 Nov 2009 13:55] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/90095

3037 Pekka Nousiainen	2009-11-11
      bug#48604 01_build.diff
      In ordered index build, if there are ops on a tuple and the first
      op is an update, then also add index entry for previous version.
[11 Nov 2009 18:17] Bugs System
Pushed into 5.1.39-ndb-7.0.10 (revid:jonas@mysql.com-20091111180401-7yobm40u7xlyppqh)
(version source revid:jonas@mysql.com-20091111180401-7yobm40u7xlyppqh) (merge vers:
5.1.39-ndb-7.0.10) (pib:13)
[11 Nov 2009 18:18] Bugs System
Pushed into 5.1.39-ndb-7.1.0 (revid:jonas@mysql.com-20091111181246-svwd3339gsse9pyw)
(version source revid:jonas@mysql.com-20091111181246-svwd3339gsse9pyw) (merge vers:
5.1.39-ndb-7.1.0) (pib:13)
[11 Nov 2009 18:19] Jonas Oreland
pushed to 6.2.19, 6.3.29 and 7.0.10
[15 Nov 2009 20:30] Jon Stephens
Documented in the NDB-6.2.19, 6.3.29 and 7.0.10 changelogs, as follows:

        With 2 or more data nodes, a crash could occur while adding an
        ordered index online if an index entry could not be found.

Closed.
[15 Nov 2009 22:26] Jon Stephens
Per Pekka email, updated changelog entry to read:

        The creation of an ordered index on a table undergoing DDL
        operations could cause a data node crash under certain
        timing-dependent conditions.

(No status change.)