bug#48604 01_build.diff In ordered index build, if there are ops on a tuple and the first op is an update, then also add index entry for previous version.